# cs-signaling

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  config.h.in
data/: demo3.txt
doc/: CaseStudyDescription.odt
include/: common.h  edge.h  node.h  rrsignal.h  system.h  train.h
src/: edge.cpp  main.cpp  node.cpp  rrsignal.cpp  system.cpp  train.cpp
